examples/test/testpolicy7139.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7139
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key23: value19
      key6: value30
      key36: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value32
          key19: value27
      podSelector:
        matchLabels:
          key41: value49
          key44: value42
          key8: value24
